# zeaz-platform

./: .env.cloudflare.example  .env.enc  .env.example  .faf  .gitignore  .gitignore.terraform-provider-signing  .gitmodules  .golangci.yml  .goreleaser.yml  .mcp.json  .sops.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  Makefile.app-servers  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.5.md  ROADMAP.md  SECURITY.md  apply-phase55-makefile-refactor.sh  azchat  azure_proxy.py  base_commit.txt  cf-renew.sh  cloudflare-platform.txt  docker-compose.yml  ecosystem.config.cjs  gcp.sh  install-zdash-fullstack.sh  install-zdash-prod.sh  package.json  package.json.txt  (+10 more)
apps/zwallet/api/: Dockerfile  pyproject.toml  requirements.in  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 7054888e2a84_phase10_models.py
backend/app/agents/: friday.py  graphic.py  guardian.py  joe.py  social.py
backend/app/ai_trader/: registry.py
backend/app/api/: audit.py  billing.py  enterprise_os.py  global_ops.py  integrations.py  macro_simulation.py  marketplace.py  metrics.py  notifications.py  predictive_sre.py  realtime.py  risk.py
backend/app/audit/: __init__.py  audit_service.py
backend/app/auth/: models.py  password.py
backend/app/backtesting/: backtest_service.py  models.py  promotion.py  reports.py  strategy_base.py
backend/app/billing/: invoice_service.py  models.py  plan_catalog.py  stripe_adapter.py  usage_meter.py
backend/app/boardroom/: models.py
backend/app/collaboration/: router.py  schemas.py  service.py
backend/app/content/: __init__.py  pipeline.py  social.py  social_service.py
backend/app/continuous_planning/: models.py  planning_loop.py  planning_memory.py  strategic_tradeoff.py  war_room_service.py
backend/app/core/: config.py  events.py
backend/app/db/: migrations.py
backend/app/developer/: models.py
backend/app/digital_twin/: entity_registry.py  relationship_service.py  twin_graph.py  twin_report_service.py
backend/app/enterprise/: export_service.py  models.py
backend/app/enterprise_os/: capability_map.py  maturity_model.py  operating_cadence.py
backend/app/governance_refinement/: control_calibration.py  control_impact.py  governance_drift.py  models.py  policy_simulator.py  risk_appetite.py
backend/app/integrations/: models.py  ticketing_adapters.py
backend/app/iot/: base.py
backend/app/launch/: docs_publish_service.py  public_status_service.py  telemetry_service.py
backend/app/lessons/: models.py  pattern_library.py
backend/app/long_horizon/: horizon_report_service.py  horizon_scanner.py  long_range_scenarios.py  models.py
backend/app/macro_simulation/: shock_simulator.py  (+2 more)
backend/tests/: conftest.py  test_agent_runtime.py  test_ai_trader_service.py  test_ceo_janie_flow.py  test_collaboration_api.py  test_drawdown_guard.py  test_friday_agent.py  test_phase10.py  test_presence.py  test_realtime_bus.py  test_scheduler_api.py  test_scheduler_risk_integration.py  test_signal_validation.py  test_trading_api.py
(+8100 files in other folders)
