[project]
name = "zdash-backend"
version = "0.1.0"
description = "zDash Studio Server of ZeaZDev Company Limited"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "APScheduler>=3.10.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "prometheus-client>=0.20.0",
  "email-validator>=2.2.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests", "app/tests"]
addopts = "-q"
filterwarnings = [
  "ignore:.*'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning:passlib\\.utils",
]

[tool.ruff.lint]
extend-ignore = ["E701", "E702", "F403", "E741"]
