[project]
name = "zwallet-api"
version = "1.0.0"
description = "Enterprise wallet API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic-settings==2.9.1",
  "sqlalchemy[asyncio]==2.0.40",
  "asyncpg==0.30.0",
  "alembic==1.15.2",
  "pyjwt==2.12.1",
  "passlib[bcrypt]==1.7.4",
  "web3==7.15.0",
  "httpx==0.28.1",
  "slowapi==0.1.9",
  "python-multipart==0.0.26",
  "orjson==3.11.6"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
