[package]
name = "microsandbox-openwork-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
microsandbox = { version = "0.5.6", default-features = false, features = ["keyring", "prebuilt"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
